--- a/src/main/resources/static/css/card.css
+++ b/src/main/resources/static/css/card.css
@@ -34,7 +34,10 @@ h1{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top: -10rem;
+
 }
+
 .tarjeta2{
   width: 20%;
   color: #ffffff;
@@ -42,6 +45,7 @@ h1{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top: -10rem;
   
 }
 
@@ -51,8 +55,9 @@ h1{
     width: 240px;
     height: 154px;
     perspective: 1000px;
-    margin-top: 2rem;
+    
   }
+ 
   
   .heading_8264 {
     color: white;
@@ -61,7 +66,6 @@ h1{
     font-size: 0.5em;
     top: 1.5em;
     left: 10em;
-    font-size: 12px;
   }
   .heading_82644{
     color: white;
@@ -118,6 +122,15 @@ h1{
     font-size: 0.5em;
     top: 8em;
     left: 2.1em;
+    font-size: 13px;
+  }
+  .date_8265{
+    color: rgb(255, 0, 0);
+    position: absolute;
+    font-weight: bold;
+    font-size: 0.5em;
+    top: 8em;
+    left: 6.5em;
     font-size: 13px;
   }
   
